Fix about page overflow issue

--- a/src/app/about/layout.module.css
+++ b/src/app/about/layout.module.css
@@ -2,7 +2,6 @@
 	display: flex;
 	flex-direction: column;
 	height: 100dvh;
-	overflow: hidden;
 
 	@media (max-width: 768px) {
 		height: auto;
